@@ -1,0 +1,15 @@
+DEFINED_PHASES=compile install postinst postrm preinst prepare prerm pretend setup unpack
+DEPEND=app-admin/eselect-opencl kernel_linux? ( >=sys-libs/glibc-2.6.1 ) X? ( >=app-admin/eselect-opengl-1.0.9 ) app-arch/xz-utils kernel_linux? ( virtual/linux-sources ) kernel_linux? ( virtual/modutils ) sys-apps/sed kernel_linux? ( virtual/linux-sources ) sys-apps/pciutils virtual/pkgconfig
+DESCRIPTION=NVIDIA X11 driver and GLX libraries
+EAPI=5
+HOMEPAGE=http://www.nvidia.com/
+IUSE=acpi multilib kernel_FreeBSD kernel_linux pax_kernel +tools +X kernel_linux
+KEYWORDS=-* ~amd64
+LICENSE=GPL-2 NVIDIA-r1
+RDEPEND=app-admin/eselect-opencl kernel_linux? ( >=sys-libs/glibc-2.6.1 ) X? ( >=app-admin/eselect-opengl-1.0.9 ) acpi? ( sys-power/acpid ) tools? ( dev-libs/atk dev-libs/glib x11-libs/gdk-pixbuf x11-libs/gtk+:2 x11-libs/libX11 x11-libs/libXext x11-libs/pango[X] ) X? ( <x11-base/xorg-server-1.15.99 >=x11-libs/libvdpau-0.3-r1 multilib? ( || ( ( x11-libs/libX11[abi_x86_32] x11-libs/libXext[abi_x86_32] ) app-emulation/emul-linux-x86-xlibs ) ) ) kernel_linux? ( virtual/modutils )
+REQUIRED_USE=tools? ( X )
+RESTRICT=bindist mirror strip
+SLOT=0
+SRC_URI=amd64? ( http://us.download.nvidia.com/XFree86/Linux-x86_64/319.82/NVIDIA-Linux-x86_64-319.82.run )
+_eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	flag-o-matic	62e05953761097ae84a70d6c7a3e2c9c	linux-info	a9cbd6bbe2b28166e403321882f3c73c	linux-mod	c07f7857b242a2407527aa521905cfba	multilib	892e597faee02a5b94eb02ab512e7622	nvidia-driver	92e88a2e33d056779baa88f1061c662e	portability	536c5e70c5fb252ed3b769e04aa3f05b	readme.gentoo	2466b2f6a77a9600954c6b99ebca6e02	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	udev	a9a8d051efb42bfe884c1db82ce161de	unpacker	04385b0f181c42fa9c18ec0e31729d1f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=f8c47700e9bd044c9fdf941e7128eb10
